docs:  add comments

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             Moves: <span class="moves">3</span>
 
-            <div class="restart">
+            <div id="restart" class="restart">
                 <i class="fa fa-repeat"></i>
             </div>
         </section>
