feat: implement game clock and display

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         </header>
 
         <section class="score-panel">
+            <div id="clock">
+                <p id="time" class="time">Time : <span id="elapsing" class="elapsing"> 00:00:00 </span></p>
+            </div>
             <ul class="stars">
                 <li><i class="fa fa-star"></i></li>
                 <li><i class="fa fa-star"></i></li>
